# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  graphics.c  graphics.h  main.c
